<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_cancle_login"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp65"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/ed_input_phone_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_login_input"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textColor="#4E4E4E"
        android:hint="@string/input_phone_number"
        android:maxLength="11"
        android:inputType="number"
        android:paddingLeft="@dimen/dp12"
        android:textSize="@dimen/sp15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp25"
        android:layout_marginRight="@dimen/dp25"
        android:layout_marginTop="@dimen/dp5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_input_phone_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp2"
            android:layout_weight="4"
            android:background="@drawable/bg_login_input"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:hint="@string/input_phone_code"
            android:maxLength="6"
            android:inputType="number"
            android:paddingLeft="@dimen/dp12"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/bg_login_input"
            android:gravity="center"
            android:text="@string/get_code"
            android:textSize="@dimen/sp13" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_other_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center"
            android:text="@string/other_login_methos"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginLeft="@dimen/dp25"
            android:layout_marginRight="@dimen/dp25"
            android:layout_marginTop="@dimen/dp8">


            <ImageView
                android:id="@+id/iv_qq_login"
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_toLeftOf="@+id/iv_weinxin_login"
                android:src="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/iv_weinxin_login"
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:src="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/iv_weinbo_login"
                android:layout_width="@dimen/dp45"
                android:layout_height="@dimen/dp45"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toRightOf="@+id/iv_weinxin_login"
                android:src="@mipmap/ic_launcher_round" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center"
            android:text="@string/login_problem"
            android:textColor="@color/login_problem" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp45"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp25">
        <ImageView
            android:layout_width="@dimen/dp25"
            android:layout_height="@dimen/dp25"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/tv_user_aggrement"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp25"
            android:text="@string/user_agreement"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dp5"
            android:textColor="@android:color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp25"
            android:layout_marginRight="@dimen/dp25"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/dp10"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
