<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/item_bg_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp4"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="@dimen/dp45"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_marginTop="@dimen/dp8"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp11"
                android:layout_toRightOf="@+id/iv_photo"
                android:text="Mrs周"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_user_name"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp3"
                android:layout_toRightOf="@+id/iv_photo"
                android:text="闪拍号:88888888"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="@dimen/dp15"
                android:layout_height="@dimen/dp15"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_marginRight="@dimen/dp18"
                android:layout_marginTop="@dimen/dp8"
                android:src="@mipmap/ic_launcher_round" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="@dimen/dp11"
                android:layout_height="@dimen/dp11"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@mipmap/ic_launcher_round"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center"
                android:textSize="@dimen/sp11"
                android:text="摩羯座"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/dp4"
                android:gravity="center"
                android:textSize="@dimen/sp11"
                android:text="安徽 淮南市"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="脚踏实地，仰望星空。"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp8"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/white"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fance"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/iv_fance"
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp2"
                    android:src="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_attention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/attention"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/iv_attention"
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp2"
                    android:src="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_get_praise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/praise"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/iv_get_praise"
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp2"
                    android:src="@mipmap/ic_launcher_round" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@color/colorAccent">

        <com.jzkj.shanpai.widget.tablayout.TabLayout
            android:id="@+id/my_tb_layout"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/white"
            app:tabLineOffset="10dp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@style/tab_textsize"
            app:tabTextColor="@android:color/darker_gray" />
    </RelativeLayout>
</LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/my_vp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
